Refactor and improve the format of vulnerability scan report
Signed-off-by: Cheng <fangyuanc@vmware.com>

--- a/src/portal/lib/src/_mixin.scss
+++ b/src/portal/lib/src/_mixin.scss
@@ -29,3 +29,9 @@
     width: $width !important;
     height: $width !important;
 }
+
+@mixin flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
