--- a/src/portal/lib/src/tag/tag-detail.component.scss
+++ b/src/portal/lib/src/tag/tag-detail.component.scss
@@ -1,4 +1,6 @@
 @import "../mixin";
+$size24:24px;
+
 .overview-section {
     padding-bottom: 36px;
 }
@@ -6,7 +8,7 @@
 .detail-section {
     background-color: #fafafa;
     padding-left: 12px;
-    padding-right: 24px;
+    padding-right: $size24;
 }
 
 .title-block {
@@ -58,7 +60,7 @@
 }
 
 .summary-block {
-    margin-top: 24px;
+    margin-top: $size24;
     display: flex;
     flex-wrap: row wrap;
 }
@@ -69,29 +71,45 @@
     justify-content: space-around;
 }
 
-.vulnerabilities-info {
-    padding-left: 24px;
-}
-
  .third-column {
     margin-left: 36px;
 }
 .vulnerability{
-margin-left: 50px;
+    margin-left: 50px;
     margin-top: -12px;
     margin-bottom: 20px;}
 
-.vulnerabilities-info .second-column {
-    text-align: left;
-    margin-left: 6px;
+.vulnerabilities-info {
+    padding-left: $size24;
+    .second-column{
+        text-align: left;
+        margin-left: 6px;
+        .second-row {
+            margin-top: 6px;
+        }
+        .row-flex {
+            display: flex;
+            align-items: center;
+            .icon-position {
+                width: $size24;
+                height: $size24;
+                @include flex-center;
+            }
+            .detail-count {
+                height: 20px;
+                width: 30px;
+                @include flex-center;
+            }
+        }
+    }   
 }
 
 .fourth-column{
-float: left;
-margin-left:20px;}
-
-.vulnerabilities-info .second-row {
-    margin-top: 6px;
+    float: left;
+    margin-left:20px;
+    div {
+        height: $size24;
+    }
 }
 
 .detail-title {
@@ -119,6 +137,9 @@ margin-left:20px;}
     text-align: left;
     margin-left: 6px;
     font-weight: 500;
+    div {
+        height: $size24;
+    }
 }
 .tip-icon-medium {
     color: orange;
@@ -126,8 +147,6 @@ margin-left:20px;}
 .tip-icon-low{
     color:yellow;
 }
-.fourth-column div, .image-detail-value div{
-height: 24px;
-}
-.second-column div {padding-left: 30px;}
-.second-column div clr-icon{margin-right: 10px;  margin-left: -35px;}
+
+
+
