--- a/src/portal/lib/src/cron-schedule/cron-schedule.component.scss
+++ b/src/portal/lib/src/cron-schedule/cron-schedule.component.scss
@@ -34,8 +34,8 @@
       display: inline-block;
       width: 100px;
     }
-  
-    .cron-input {
+
+    .cron-label {
       width: 195px;
     }
   }
