--- a/src/portal/lib/src/config/gc/gc.component.html
+++ b/src/portal/lib/src/config/gc/gc.component.html
@@ -1,24 +1,4 @@
 <div class="cron-selection">
   <cron-selection [labelCurrent]="getLabelCurrent" [labelEdit]='getText' [originCron]='originCron' (inputvalue)="scheduleGc($event)"></cron-selection>
+  <button class="btn btn-outline btn-sm gc-start-btn" (click)="gcNow()" [disabled]="disableGC">{{'GC.GC_NOW' | translate}}</button>
 </div>
-<button class="btn btn-primary btn-sm gc-start-btn" (click)="gcNow()" [disabled]="disableGC">{{'GC.GC_NOW' | translate}}</button>
-<div class="job-header font-style">{{'GC.JOB_HISTORY' | translate}}</div>
-<clr-datagrid>
-  <clr-dg-column>{{'GC.JOB_ID' | translate}}</clr-dg-column>
-  <clr-dg-column>{{'GC.TRIGGER_TYPE' | translate}}</clr-dg-column>
-  <clr-dg-column>{{'STATUS' | translate}}</clr-dg-column>
-  <clr-dg-column>{{'START_TIME' | translate}}</clr-dg-column>
-  <clr-dg-column>{{'UPDATE_TIME' | translate}}</clr-dg-column>
-  <clr-dg-column>{{'LOGS' | translate}}</clr-dg-column>
-  <clr-dg-row *ngFor="let job of jobs" [clrDgItem]='job'>
-    <clr-dg-cell>{{job.id }}</clr-dg-cell>
-    <clr-dg-cell>{{(job.type ? 'SCHEDULE.'+ job.type.toUpperCase() : '') | translate }}</clr-dg-cell>
-    <clr-dg-cell>{{job.status.toUpperCase() | translate}}</clr-dg-cell>
-    <clr-dg-cell>{{job.createTime | date:'medium'}}</clr-dg-cell>
-    <clr-dg-cell>{{job.updateTime | date:'medium'}}</clr-dg-cell>
-    <clr-dg-cell>
-      <a *ngIf="job.status.toLowerCase() === 'finished' || job.status.toLowerCase() === 'error'" target="_blank" href="/api/system/gc/{{job.id}}/log"><clr-icon shape="list"></clr-icon></a>
-    </clr-dg-cell>
-  </clr-dg-row>
-  <clr-dg-footer>{{'GC.LATEST_JOBS' | translate :{param: jobs.length} }}</clr-dg-footer>
-</clr-datagrid>
