--- a/src/portal/lib/src/config/gc/gc.component.scss
+++ b/src/portal/lib/src/config/gc/gc.component.scss
@@ -1,45 +1,10 @@
-.flex-layout {
-    display: flex;
-    align-items: center;
-    margin:20px 0;
-    font-size: .541667rem;
-}
-
-.font-style {
-    color: #000;
-    font-size: .541667rem;
-}
-
 .cron-selection {
     margin-top: 20px;
-}
-
-.setting-wrapper {
-    label {
-        width: 228px;
-    }
-    *:not(:first-child), span {
-        margin-right: 18px;
-    }
-}
-
-.normal-wrapper {
-    > span:first-child {
-        width: 228px;
-    }
-    > span:not(:first-child){
-        margin-right: 18px;
-    }
+    display: flex;
+    align-items: center;
 }
 
 .gc-start-btn {
     width:150px;
-}
-
-.job-header {
-    margin:20px 0 -10px 0;
-}
-
-.day-selector-wrapper {
-    display: flex;
+    margin-top: 47px;
 }
