--- a/src/portal/lib/src/cron-schedule/cron-schedule.component.html
+++ b/src/portal/lib/src/cron-schedule/cron-schedule.component.html
@@ -1,21 +1,23 @@
 <div class="normal-wrapper flex-layout" *ngIf="!isEditMode">
-  <span class="font-style">{{ labelCurrent | translate }}</span>
-  <span>{{(originScheduleType ? 'SCHEDULE.'+ originScheduleType.toUpperCase(): "") | translate}}</span>
-  <a [hidden]="originScheduleType!==SCHEDULE_TYPE.HOURLY" href="javascript:void(0)" role="tooltip" aria-haspopup="true" class="tooltip tooltip-top-right">
-      <clr-icon shape="info-circle" class="info-tips-icon" size="24"></clr-icon>
-      <span class="tooltip-content">{{'CONFIG.TOOLTIP.HOURLY_CRON' | translate}}</span>
-  </a>
-  <a [hidden]="originScheduleType!==SCHEDULE_TYPE.WEEKLY" href="javascript:void(0)" role="tooltip" aria-haspopup="true" class="tooltip tooltip-top-right">
-      <clr-icon shape="info-circle" class="info-tips-icon" size="24"></clr-icon>
-      <span class="tooltip-content">{{'CONFIG.TOOLTIP.WEEKLY_CRON' | translate}}</span>
-  </a>
-  <a [hidden]="originScheduleType!==SCHEDULE_TYPE.DAILY" href="javascript:void(0)" role="tooltip" aria-haspopup="true" class="tooltip tooltip-top-right">
-      <clr-icon shape="info-circle" class="info-tips-icon" size="24"></clr-icon>
-      <span class="tooltip-content">{{'CONFIG.TOOLTIP.DAILY_CRON' | translate}}</span>
-  </a>
-  <span [hidden]="originScheduleType!==SCHEDULE_TYPE.CUSTOM">{{ "SCHEDULE.CRON" | translate }} :</span>
-  <span [hidden]="originScheduleType!==SCHEDULE_TYPE.CUSTOM">{{ oriCron }}</span>
-  <button class="btn btn-outline btn-sm" (click)="editSchedule()" id="editSchedule">
+  <div>
+    <span class="font-style">{{ labelCurrent | translate }}</span>
+    <span>{{(originScheduleType ? 'SCHEDULE.'+ originScheduleType.toUpperCase(): "") | translate}}</span>
+    <a [hidden]="originScheduleType!==SCHEDULE_TYPE.HOURLY" href="javascript:void(0)" role="tooltip" aria-haspopup="true" class="tooltip tooltip-top-right">
+        <clr-icon shape="info-circle" class="info-tips-icon" size="24"></clr-icon>
+        <span class="tooltip-content">{{'CONFIG.TOOLTIP.HOURLY_CRON' | translate}}</span>
+    </a>
+    <a [hidden]="originScheduleType!==SCHEDULE_TYPE.WEEKLY" href="javascript:void(0)" role="tooltip" aria-haspopup="true" class="tooltip tooltip-top-right">
+        <clr-icon shape="info-circle" class="info-tips-icon" size="24"></clr-icon>
+        <span class="tooltip-content">{{'CONFIG.TOOLTIP.WEEKLY_CRON' | translate}}</span>
+    </a>
+    <a [hidden]="originScheduleType!==SCHEDULE_TYPE.DAILY" href="javascript:void(0)" role="tooltip" aria-haspopup="true" class="tooltip tooltip-top-right">
+        <clr-icon shape="info-circle" class="info-tips-icon" size="24"></clr-icon>
+        <span class="tooltip-content">{{'CONFIG.TOOLTIP.DAILY_CRON' | translate}}</span>
+    </a>
+    <span [hidden]="originScheduleType!==SCHEDULE_TYPE.CUSTOM">{{ "SCHEDULE.CRON" | translate }} :</span>
+    <span [hidden]="originScheduleType!==SCHEDULE_TYPE.CUSTOM">{{ oriCron }}</span>
+  </div>
+  <button class="btn btn-primary btn-sm" (click)="editSchedule()" id="editSchedule">
     {{ "BUTTON.EDIT" | translate }}
   </button>
 </div>
@@ -40,11 +42,13 @@
       </span>
     </label>
   </div>
-  <button class="btn btn-primary btn-sm"
+  <div class="confirm-button">
+    <button class="btn btn-primary btn-sm"
     (click)="save()" id="config-save">
     {{ "BUTTON.SAVE" | translate }}
-  </button>
-  <button class="btn btn-primary btn-sm" (click)="isEditMode=false">
-    {{ "BUTTON.CANCEL" | translate }}
-  </button>
+    </button>
+    <button class="btn btn-primary btn-sm" (click)="isEditMode=false">
+      {{ "BUTTON.CANCEL" | translate }}
+    </button>
+  </div>
 </div>
